# AI

./: .gitattributes  INTEGRATION_STEPS_CN.md  MIGRATION_GUIDE_CN.md  QUICK_START_CN.md  README_MIGRATION_PROJECT.md  START_HERE_CN.md  SUMMARY_CN.md
multimoding/Board_Samples/Microros_Samples/Publisher/: .cproject  .gitignore  .mxproject  .project  Publisher.ioc  Publisher.launch
multimoding/Board_Samples/Microros_Samples/Publisher_Subscriber/: .cproject  .project  Publisher_Subscriber.ioc  Publisher_Subscriber.launch
multimoding/Board_Samples/Microros_Samples/Publisher_imu/: .cproject  .mxproject  .project  Publisher_imu.ioc  Publisher_imu.launch
multimoding/Board_Samples/Microros_Samples/Publisher_lidar/: .cproject  .project  Publisher_lidar.ioc  Publisher_lidar.launch
multimoding/Board_Samples/Microros_Samples/Publisher_odom/: .cproject  .mxproject  .project  Publisher_odom.ioc
multimoding/Board_Samples/Microros_Samples/Subscriber/: .cproject  .project  Subscriber.ioc  Subscriber.launch
multimoding/Board_Samples/Microros_Samples/Subscriber_beep/: .cproject  .project  Subscriber_beep.ioc  Subscriber_beep.launch
multimoding/Board_Samples/Microros_Samples/Subscriber_twist/: .cproject  .project  Subscriber_twist.ioc
multimoding/Board_Samples/Microros_Samples/Subscriber_uart_servo/: .cproject  .project  Subscriber_uart_servo.ioc  Subscriber_uart_servo.launch
multimoding/Board_Samples/STM32_Samples/: .gitignore
multimoding/Board_Samples/STM32_Samples/Adc/: .cproject  .mxproject  .project  Adc.ioc  Adc.launch
multimoding/Board_Samples/STM32_Samples/Beep/: .cproject  Beep.ioc  Beep.launch
multimoding/Board_Samples/STM32_Samples/CAN/: .cproject  .mxproject  CAN.ioc
multimoding/Board_Samples/STM32_Samples/Encoder/: .cproject  Encoder.ioc
multimoding/Board_Samples/STM32_Samples/Flash/: .cproject  .mxproject  .project  Flash.ioc  Flash.launch
multimoding/Board_Samples/STM32_Samples/Key/: .cproject  .mxproject  .project  Key.ioc  Key.launch
multimoding/Board_Samples/STM32_Samples/Led/: .cproject  .project  Led.ioc
multimoding/Board_Samples/STM32_Samples/Motor/: .cproject  .mxproject  Motor.ioc
multimoding/Board_Samples/STM32_Samples/Motor_PID/: .cproject  .project  Motor_PID.ioc  Motor_PID.launch
multimoding/Board_Samples/STM32_Samples/OLED/: .cproject  .mxproject  .project  OLED.ioc
multimoding/Board_Samples/STM32_Samples/Pwm_Servo/: .cproject  .mxproject  .project  Pwm_Servo.ioc
multimoding/Board_Samples/STM32_Samples/RGB/: .cproject  .mxproject  .project  RGB.ioc  RGB.launch
multimoding/Board_Samples/STM32_Samples/Read_IMU/: .cproject  .mxproject  Read_IMU.ioc
multimoding/Board_Samples/STM32_Samples/Read_Lidar/: .cproject  .mxproject  .project  Read_Lidar.ioc  Read_Lidar.launch
multimoding/Board_Samples/STM32_Samples/SBus/: .cproject  .project  SBus.ioc
multimoding/Board_Samples/STM32_Samples/USB_Host/: .cproject  .mxproject  .project  USB_Host.ioc  USB_Host.launch
multimoding/Board_Samples/STM32_Samples/Uart/: .cproject  .mxproject  .project  Uart.ioc  Uart.launch
multimoding/CONFIG/: config_robot.py
multimoding/Code/: calibrate_arm.py  config_robot.py
multimoding/Code/Orin/M3Pro_ws/src/updatecostmap/: CMakeLists.txt
multimoding/Code/Orin/M3Pro_ws/src/updatecostmap/src/: update_costmap.cpp
multimoding/Code/Orin/yahboomcar_ws/src/MoveIt_demo/: CMakeLists.txt  package.xml
multimoding/Code/Orin/yahboomcar_ws/src/MoveIt_demo/.ipynb_checkpoints/: CMakeLists-checkpoint.txt
multimoding/Code/Orin/yahboomcar_ws/src/MoveIt_demo/scene/: floor.scene  shape.scene
multimoding/Code/Orin/yahboomcar_ws/src/MoveIt_demo/src/: cartesian_path.cpp  multi_track_motion.cpp  obstacle_avoidance.cpp  random_move.cpp  set_scene.cpp  set_target_joints.cpp  set_target_position.cpp
multimoding/Code/Orin/yahboomcar_ws/src/MoveIt_demo/src/.ipynb_checkpoints/: set_target_joints-checkpoint.cpp  set_target_position-checkpoint.cpp
multimoding/Code/jetson nano_RaspberryPi/: Docker_M3Pro-nano.sh  Docker_M3Pro-pi.sh  Docker_M3Pro_Joy-nano.sh  Docker_M3Pro_Joy-pi.sh
multimoding/Code/opencv/: CMakeLists.txt  package.xml
wheeltec_ros2/src/: ROS2-V3.0(humble)常用指令.txt
wheeltec_ros2/src/auto_recharge_ros2/: Charger_Position.json  robot_info.yaml
wheeltec_ros2/src/largemodel_wheeltec/: README_CN.md  package.xml  setup.cfg  setup.py
wheeltec_ros2/src/largemodel_wheeltec/config/: map_mapping.yaml  wheeltec_config.yaml
wheeltec_ros2/src/largemodel_wheeltec/largemodel/: __init__.py  action_service_wheeltec.py
wheeltec_ros2/src/largemodel_wheeltec/launch/: wheeltec_voice_control.launch.py
wheeltec_ros2/src/ros2_astra_camera/: README.MD
wheeltec_ros2/src/turn_on_wheeltec_robot/: CMakeLists.txt
(+938 files in other folders)
